[package]
name = 'pallet-template'
version = '4.0.0-dev'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'frame-system'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '0b962f218f0cdd796dadfe26c3f09e68f7861b26'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '0b962f218f0cdd796dadfe26c3f09e68f7861b26'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '0b962f218f0cdd796dadfe26c3f09e68f7861b26'

[dependencies.fp-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '0b962f218f0cdd796dadfe26c3f09e68f7861b26'

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',
	'sp-std/std',
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"fp-evm/std"
]
try-runtime = ['frame-support/try-runtime']
