[package]
name = 'pallet-vesting'
publish = false
version = '4.0.0-dev'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'frame-system'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'



[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',
	'sp-std/std',
	'pallet-vesting/std'
]
try-runtime = ['frame-support/try-runtime']
